fixed H1 tag wrapping site-title, leading to possible multiple H1 on singular pages fixes #1760

--- a/assets/front/scss/0_2_header/_headernav.scss
+++ b/assets/front/scss/0_2_header/_headernav.scss
@@ -58,6 +58,7 @@
             white-space: nowrap;
             max-width: 100%;
             height: auto;
+            color:$black;//added for https://github.com/presscustomizr/customizr/issues/1760
             @at-root .navbar-brand img {
               width: auto;
               max-width: 100%;
